# AutoInsight

./: .gitignore  README  README.md
AutoInsight/: .env  README  database.csv  main.py  pyproject.toml  report.md  requirements.txt
AutoInsight/automl/: graph.py  llm.py  state.py
AutoInsight/automl/agents/: cleaning.py  eda.py  feature.py  goal_parser.py  modeling.py  report.py  strategy.py  validator.py  visualization.py
AutoInsight/automl/tools/: cleaning.py  feature_engineering.py  modeling.py  profiling.py  visualization.py
autoinsight-ui/: README.md
autoinsight-ui/backend/: .env  main.py  models.py  requirements.txt  runner.py  start.bat
autoinsight-ui/backend/reports/: fa0bf262-e8a6-4a95-82a0-366c9f352cdb.md  fa442576-ae3c-4941-a3cd-203906ca4673.md
autoinsight-ui/frontend/: index.html  package-lock.json  package.json  start.bat  vite.config.js
autoinsight-ui/frontend/src/: App.jsx  api.js  index.css
autoinsight-ui/frontend/src/components/: DataSourcePanel.jsx  FeatureVisualizationPanel.jsx  JobHistory.jsx  LogTerminal.jsx  ProgressDashboard.jsx  ReportViewer.jsx  ResultsDashboard.jsx  StageProgress.jsx
