[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "autoinsight"
version = "0.1.0"
description = "An intelligent LLM-driven AutoML system using LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-groq>=0.1",
    "langchain-community>=0.2", #changed to langchain-ollama
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
    "requests>=2.31",
    "google-generativeai>=0.5",
    "langchain-google-genai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["automl*"]
